# castor-hal

./: .gitignore  README.md  pyproject.toml
src/castor_hal/: __init__.py  actuator.py  errors.py  goal.py  state.py  transport.py
src/castor_hal/adapters/: __init__.py  j1939.py
tests/: conftest.py  test_actuator.py  test_errors.py  test_goal.py  test_j1939.py  test_state.py  test_transport.py
