[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "castor-hal"
version = "0.1.0"
description = "Transport hardware-abstraction layer for robot-md-gateway — one actuator interface fronts serial, CAN/J1939, ISOBUS, ROS 2 and MAVLink."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "craigm26", email = "craigm26@gmail.com" }]
keywords = ["robotics", "robot-md", "rcan", "hal", "actuator", "isobus", "j1939", "ros2", "mavlink"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
# The TransportActuator bridge returns the gateway's ActuatorOutcome; the pure
# transport core (goal/state/errors/transport) imports nothing from it.
dependencies = ["robot-md-gateway>=0.5.0a1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/RobotRegistryFoundation/castor-hal"
Repository = "https://github.com/RobotRegistryFoundation/castor-hal"

[tool.hatch.build.targets.wheel]
packages = ["src/castor_hal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
